--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <!-- Header -->
   <header class="header">
     <div class="container">
-        <p>Welcome to</p>
-        <h1 title="Camp Chippewa">Resume Builder by Taha Ahmed</h1>
+      <p>Welcome to</p>
+      <h1>Resume Builder by Taha Ahmed</h1>
     </div>
-</header>
+  </header>
 
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p>Developed And Design By <a href="https://github.com/Sid-Taha/Interactive-Resume-Builder.git" class="link">Taha
+          Ahmed</a></p>
+      <p>&copy; All Copyrights Reserved by Taha Ahmed</p>
+    </div>
+  </footer>
 </body>
+
 </html>
