layout page done

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Resume Builder - Layout Selection</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,15 +16,41 @@
     </div>
   </header>
 
+  <div class="layoutHeading">
+    <h1>Choose your Resume Layout</h1>
+  </div>
+
+  <!-- Main Content -->
+  <main class="main">
+    <section class="section">
+      <article>
+        <a href="1/index.html">
+          <h3>Standard Resume</h3>
+        </a>
+        <div>
+          <img src="simple.jpg" alt="Preview of Standard Resume">
+        </div>
+        <p>Standard Resume gives you a <br> free, standard, professional <br> resume.</p>
+      </article>
+      
+      <article>
+        <a href="1/index.html">
+          <h3>Modern Resume</h3>
+        </a>
+        <div>
+          <img src="simple.jpg" alt="Preview of Modern Resume">
+        </div>
+        <p>Modern Resume gives you a <br> free, modern, professional <br> resume.</p>
+      </article>
+    </section>
+  </main>
 
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <p>Developed And Design By <a href="https://github.com/Sid-Taha/Interactive-Resume-Builder.git" class="link">Taha
-          Ahmed</a></p>
-      <p>&copy; All Copyrights Reserved by Taha Ahmed</p>
+      <p>Developed and Designed by <a href="https://github.com/Sid-Taha/Interactive-Resume-Builder.git" target="_blank" class="link">Taha Ahmed</a></p>
+      <p>&copy; All Rights Reserved by Taha Ahmed</p>
     </div>
   </footer>
 </body>
-
 </html>
