--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,31 +17,31 @@
     </div>
   </header>
 
-  <div class="layoutHeading">
-    <h1>Choose your Resume Layout</h1>
+  <div class="layout-heading">
+    <h1>Select Your Resume Layout</h1>
   </div>
 
   <!-- Main Content -->
   <main class="main">
-    <section class="section">
-      <article>
-        <a href="1/index.html">
+    <section class="layout-section">
+      <article class="layout-option">
+        <a href="1/index.html" class="layout-link">
           <h3>Standard Resume</h3>
         </a>
-        <div>
+        <div class="layout-preview">
           <img src="simple.jpg" alt="Preview of Standard Resume">
         </div>
-        <p>Standard Resume gives you a <br> free, standard, professional <br> resume.</p>
+        <p>Standard Resume offers you a classic, professional look for your resume.</p>
       </article>
-      
-      <article>
-        <a href="1/index.html">
+
+      <article class="layout-option">
+        <a href="1/index.html" class="layout-link">
           <h3>Modern Resume</h3>
         </a>
-        <div>
+        <div class="layout-preview">
           <img src="simple.jpg" alt="Preview of Modern Resume">
         </div>
-        <p>Modern Resume gives you a <br> free, modern, professional <br> resume.</p>
+        <p>Modern Resume provides a sleek, contemporary design for your resume.</p>
       </article>
     </section>
   </main>
@@ -53,4 +54,5 @@
     </div>
   </footer>
 </body>
+
 </html>
