--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main class="main">
     <section class="layout-section">
       <article class="layout-option">
-        <a href="1/index.html" class="layout-link">
+        <a href="./form-input/form.html" class="layout-link">
           <h3>Standard Resume</h3>
         </a>
         <div class="layout-preview">
@@ -35,7 +35,7 @@
       </article>
 
       <article class="layout-option">
-        <a href="1/index.html" class="layout-link">
+        <a href="./form-input/form.html" class="layout-link">
           <h3>Modern Resume</h3>
         </a>
         <div class="layout-preview">
