--- a/form-input/form.html
+++ b/form-input/form.html
@@ -42,9 +42,9 @@
         <div class="input-group">
           <label for="profile-pic">Profile Picture</label>
           <input type="file" id="profile-pic" name="profile-pic" accept="image/*">
+          <br>
         </div>
       </section>
-
 
       <!-- Education Section -->
       <section class="form-section">
@@ -98,7 +98,7 @@
       </section>
 
       <!-- Submit Button -->
-      <a href="../simple_layout/simpleLayout.html" target="_blank">
+      <a href="../simple_layout/simpleLayout.html">
         <button type="button" id="generateResumeBtn" class="submit-btn">Generate Resume</button>
       </a>
     </form>
