--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h3>Modern Resume</h3>
         </a>
         <div class="layout-preview">
-          <img src="simple.jpg" alt="Preview of Modern Resume">
+          <img src="modern-resume-template.png" alt="Preview of Modern Resume">
         </div>
         <p>Modern Resume provides a sleek, contemporary design for your resume.</p>
       </article>
