--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
   <main class="main">
     <section class="layout-section">
       <article class="layout-option">
-        <a href="./form-input/form.html" class="layout-link">
-          <h3>Standard Resume</h3>
+        <a href="./Milestone 1/index.html" class="layout-link">
+          <h3>Static Resume</h3>
         </a>
         <div class="layout-preview">
-          <img src="simple.jpg" alt="Preview of Standard Resume">
+          <img src="Document_page-0001.jpg" alt="Preview of Standard Resume">
         </div>
         <p>Standard Resume offers you a classic, professional look for your resume.</p>
       </article>
 
       <article class="layout-option">
         <a href="./form-input/form.html" class="layout-link">
-          <h3>Modern Resume</h3>
+          <h3>Dynamic Resume</h3>
         </a>
         <div class="layout-preview">
-          <img src="modern-resume-template.png" alt="Preview of Modern Resume">
+          <img src="Document_page-0001.jpg" alt="Preview of Modern Resume">
         </div>
         <p>Modern Resume provides a sleek, contemporary design for your resume.</p>
       </article>
